-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.7, 6.5.0
-
None
-
-
21e411687 (dev), 5f0bcd76d (6.5), 245c2b621 (dev), 4139b6d02 (6.6), 2b21a8d0f (6.5)
Steps to reproduce:
- Maximize the window
- Drag the title bar to move the window (but don't release the mouse), the window is in windowed state now
- Don't release the mouse, continue dragging the title bar, drag the window to the top of the monitor, then release the mouse, the window is maximized again now
- Click the restore button from the title bar
Expected bahavior:
The window is restored to the geometry before step1.
Actual behavior:
Some part of the window goes out of the monitor.
I found this issue exists for all Qt based applications for a very lone time. I also tried the latest version of Google Chrome, Mozilla Firefox, MS Office 365, Visual Studio and Visual Studio Code, only Firefox has similar issue.
| For Gerrit Dashboard: QTBUG-112814 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 472926,11 | Windows QPA: Fix restore geometry after dragging from maximised | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 474376,10 | Windows QPA: Fix restore geometry after dragging from maximised - Fix | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 474400,2 | Windows QPA: Fix restore geometry after dragging from maximised | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
| 474403,1 | Windows QPA: Fix restore geometry after dragging from maximised | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: ABANDONED | 0 | 0 |
| 483038,2 | Windows QPA: Fix restore geometry after dragging from maximised - Fix | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 483039,2 | Windows QPA: Fix restore geometry after dragging from maximised - Fix | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |